--- a/StewardClient/src/app/shared/views/steward-user/steward-user.component.html
+++ b/StewardClient/src/app/shared/views/steward-user/steward-user.component.html
@@ -1,1 +1,8 @@
-<span>{{ user?.emailAddress || objectId }}</span>
+<span [ngSwitch]="displayOption">
+  <span *ngSwitchCase="'name'">
+    {{ user?.name || objectId }}
+  </span>
+  <span *ngSwitchDefault>
+    {{ user?.emailAddress || objectId }}
+  </span>
+</span>
