--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.html
@@ -13,13 +13,101 @@
         <mat-card-title>Manage Team</mat-card-title>
         <mat-card-subtitle>Add and remove users within as team</mat-card-subtitle>
         <div class="sf-spacer"></div>
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="saveTeamChanges()"
+          [disabled]="!formGroup.valid"
+          stateManager
+          [monitor]="saveTeamMonitor"
+          monitorDisable
+        >
+          Save Changes
+          <button-spinner [monitor]="saveTeamMonitor" defaultIcon="save"></button-spinner>
+        </button>
       </mat-card-header>
-      <ng-container *ngIf="!!selectedTeam">
-        <div>{{ selectedTeam.name }} | {{ selectedTeam.teamLead.objectId }}</div>
-        <div *ngFor="let member of selectedTeam.members">
-          -- <steward-user [objectId]="member"></steward-user>
-        </div>
-      </ng-container>
+      <div>
+        <ng-container *ngIf="!!selectedTeam">
+          <div class="team-metadata">
+            <b>Team Lead:</b> {{ selectedTeam.teamLead.name }} ({{
+              selectedTeam.teamLead.emailAddress
+            }})
+          </div>
+          <form [formGroup]="formGroup">
+            <mat-form-field appearance="fill">
+              <mat-label>Team name</mat-label>
+              <input matInput [formControl]="formControls.name" />
+              <button
+                type="button"
+                mat-button
+                matSuffix
+                mat-icon-button
+                aria-label="Clear team name"
+                (click)="formControls.name.setValue('')"
+              >
+                <mat-icon>close</mat-icon>
+              </button>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+              <mat-label>Add user</mat-label>
+              <input
+                type="text"
+                matInput
+                [formControl]="formControls.filterUser"
+                [matAutocomplete]="auto"
+              />
+              <button
+                type="button"
+                mat-button
+                matSuffix
+                mat-icon-button
+                aria-label="Clear team lead"
+                (click)="formControls.filterUser.setValue('')"
+              >
+                <mat-icon>close</mat-icon>
+              </button>
+              <mat-autocomplete
+                autoActiveFirstOption
+                #auto="matAutocomplete"
+                [displayWith]="userAutoCompleteDisplayFn"
+                (optionSelected)="addUserToTeam($event)"
+              >
+                <mat-option *ngFor="let user of filteredUsers$ | async" [value]="user">
+                  {{ user.name }} ({{ user.emailAddress }})
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
+          </form>
+        </ng-container>
+
+        <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50]"></mat-paginator>
+        <ng-container *ngIf="!!selectedTeam">
+          <table mat-table [dataSource]="membersTable">
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>Name</th>
+              <td mat-cell *matCellDef="let member">
+                <steward-user [objectId]="member" displayOption="name"></steward-user><br />
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef>Id</th>
+              <td mat-cell *matCellDef="let member">
+                {{ member }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef>Action</th>
+              <td mat-cell *matCellDef="let element">Actions...</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </ng-container>
+      </div>
     </mat-card>
   </div>
 </div>
