--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.scss
@@ -1,3 +1,16 @@
 @import '/src/styles/mixins';
 
-@include flex-navbar-fill;
+table {
+  width: 100%;
+  margin-bottom: $gap-medium;
+}
+
+.team-metadata {
+  margin-bottom: $gap-medium;
+}
+
+mat-form-field {
+  display: block;
+  max-width: $single-input-max-width * 2;
+  width: 100%;
+}
