showing pending changes to teams

--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.scss
@@ -9,6 +9,10 @@ table {
   margin-bottom: $gap-medium;
 }
 
+.remove-btn {
+  margin: $gap-small 0;
+}
+
 mat-form-field {
   display: block;
   max-width: $single-input-max-width * 2;
