--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.html
@@ -71,7 +71,7 @@
                 autoActiveFirstOption
                 #auto="matAutocomplete"
                 [displayWith]="userAutoCompleteDisplayFn"
-                (optionSelected)="addUserToTeam($event)"
+                (optionSelected)="addUserToTeam($event?.option?.value ?? null)"
               >
                 <mat-option *ngFor="let user of filteredUsers$ | async" [value]="user">
                   {{ user.name }} ({{ user.emailAddress }})
@@ -80,6 +80,40 @@
             </mat-form-field>
           </form>
         </ng-container>
+        <div *ngIf="pendingChanges.add?.length > 0">
+          <mat-chip-list>
+            Pending Additions:
+            <mat-chip *ngFor="let userAdded of pendingChanges.add" color="accent" selected>
+              {{ userAdded.name }}
+              <button
+                type="button"
+                mat-button
+                matSuffix
+                mat-icon-button
+                (click)="removeUserFromTeam(userAdded)"
+              >
+                <mat-icon>close</mat-icon>
+              </button>
+            </mat-chip>
+          </mat-chip-list>
+        </div>
+        <div *ngIf="pendingChanges.remove?.length > 0">
+          <mat-chip-list>
+            Pending Removals:
+            <mat-chip *ngFor="let userRemove of pendingChanges.remove" color="warn" selected>
+              {{ userRemove.name }}
+              <button
+                type="button"
+                mat-button
+                matSuffix
+                mat-icon-button
+                (click)="addUserToTeam(userRemove)"
+              >
+                <mat-icon>close</mat-icon>
+              </button>
+            </mat-chip>
+          </mat-chip-list>
+        </div>
 
         <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50]"></mat-paginator>
         <ng-container *ngIf="!!selectedTeam">
@@ -87,20 +121,29 @@
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Name</th>
               <td mat-cell *matCellDef="let member">
-                <steward-user [objectId]="member" displayOption="name"></steward-user><br />
+                {{ member.name }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef>Id</th>
               <td mat-cell *matCellDef="let member">
-                {{ member }}
+                {{ member.objectId }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Action</th>
-              <td mat-cell *matCellDef="let element">Actions...</td>
+              <td mat-cell *matCellDef="let member">
+                <button
+                  class="remove-btn"
+                  mat-raised-button
+                  color="warn"
+                  (click)="removeUserFromTeam(member)"
+                >
+                  Remove
+                </button>
+              </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
