display team information in profile sidebar

--- a/StewardClient/src/app/sidebars/profile/profile.component.scss
+++ b/StewardClient/src/app/sidebars/profile/profile.component.scss
@@ -4,9 +4,14 @@
   margin-bottom: $gap-medium;
 }
 
+.profile-actions {
+  margin-top: $gap-large;
+}
+
 button {
   display: block;
   margin-bottom: $gap-medium;
+  width: $button-min-size;
 }
 
 pre {
