--- a/StewardClient/src/app/shared/views/player-profile-management/player-profile-management.component.html
+++ b/StewardClient/src/app/shared/views/player-profile-management/player-profile-management.component.html
@@ -99,8 +99,8 @@
             <mat-checkbox [formControl]="resetFormControls.resetUserSafetyRatingData"
               >Reset User Safety Rating Data</mat-checkbox
             >
-            <mat-checkbox [formControl]="resetFormControls.softDeleteInventory"
-              >Soft Delete Inventory</mat-checkbox
+            <mat-checkbox [formControl]="resetFormControls.resetUgcProfileData"
+              >Reset UGC Profile Data</mat-checkbox
             >
             <button
               mat-raised-button
