--- a/StewardClient/src/app/shared/views/player-profile-management/player-profile-management.component.html
+++ b/StewardClient/src/app/shared/views/player-profile-management/player-profile-management.component.html
@@ -4,36 +4,53 @@
       <ng-template matTabLabel>Load Template To Profile</ng-template>
       <ng-template matTabContent>
         <div class="tab-container load-template-container" *waitForMonitor="getTemplatesMonitor">
-          <form [formGroup]="loadFormGroup">
-            <mat-form-field appearance="fill">
-              <mat-label>Select Profile Template</mat-label>
-              <mat-select [formControl]="loadFormControls.template">
-                <mat-option *ngFor="let template of profileTemplates" [value]="template">
-                  {{ template }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-checkbox [formControl]="loadFormControls.continueOnBreakingChanges"
-              >Continue On Breaking Changes</mat-checkbox
-            >
-            <button
-              mat-raised-button
-              color="primary"
-              [disabled]="!loadFormGroup.valid"
-              (click)="loadTemplateToProfile()"
-              clickStop
-              [monitor]="loadTemplateMonitor"
-              stateManager
-              monitorDisable
-              monitorWarnSnackbar
-              monitorCompleteSnackbar
-            >
-              Load Template
-              <button-spinner [monitor]="loadTemplateMonitor" defaultIcon="upload"></button-spinner>
-            </button>
-            <mat-checkbox class="inline" [formControl]="loadFormControls.verifyAction">{{
-              playerConsentText
-            }}</mat-checkbox>
+          <form [formGroup]="loadFormGroup" class="sf-wrapper">
+            <div class="sf-vertical">
+              <mat-form-field appearance="fill">
+                <mat-label>Select Profile Template</mat-label>
+                <mat-select [formControl]="loadFormControls.template">
+                  <mat-option *ngFor="let template of profileTemplates" [value]="template">
+                    {{ template }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <div class="sf-horizontal">
+                <mat-button-toggle-group [formControl]="loadFormControls.forzaSandbox">
+                  <mat-button-toggle [value]="forzaSandboxEnum.Retail"
+                    >Load to Retail Sandbox</mat-button-toggle
+                  >
+                  <mat-button-toggle [value]="forzaSandboxEnum.Test"
+                    >Load to Test Sandbox</mat-button-toggle
+                  >
+                </mat-button-toggle-group>
+                <mat-checkbox [formControl]="loadFormControls.continueOnBreakingChanges"
+                  >Continue On Breaking Changes</mat-checkbox
+                >
+              </div>
+              <div class="sf-horizontal">
+                <button
+                  mat-raised-button
+                  color="primary"
+                  [disabled]="!loadFormGroup.valid"
+                  (click)="loadTemplateToProfile()"
+                  clickStop
+                  [monitor]="loadTemplateMonitor"
+                  stateManager
+                  monitorDisable
+                  monitorWarnSnackbar
+                  monitorCompleteSnackbar
+                >
+                  Load Template
+                  <button-spinner
+                    [monitor]="loadTemplateMonitor"
+                    defaultIcon="upload"
+                  ></button-spinner>
+                </button>
+                <mat-checkbox class="inline" [formControl]="loadFormControls.verifyAction">{{
+                  playerConsentText
+                }}</mat-checkbox>
+              </div>
+            </div>
           </form>
         </div>
       </ng-template>
