--- a/StewardClient/src/styles/global/steward-layout/_index.scss
+++ b/StewardClient/src/styles/global/steward-layout/_index.scss
@@ -3,3 +3,4 @@
 @import './mat-card.sticky-scroll.scss';
 @import './info-table.scss';
 @import './standard-form.scss';
+@import './standard-button.scss';
