--- a/StewardClient/src/app/shared/modules/help/help-popover-icon/help-popover-icon.component.scss
+++ b/StewardClient/src/app/shared/modules/help/help-popover-icon/help-popover-icon.component.scss
@@ -14,6 +14,11 @@ mat-card-content {
   overflow: hidden;
 }
 
+::ng-deep mat-checkbox help-popover-icon {
+  position: relative;
+  left: -$gap-small;
+}
+
 // Default help popover icon size
 $help-popover-icon-size: 36px;
 ::ng-deep .mat-button-wrapper > help-popover-icon {
