--- a/StewardClient/src/app/pages/tools/pages/user-details/steelhead/steelhead-user-details.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-details/steelhead/steelhead-user-details.component.html
@@ -4,7 +4,10 @@
     <mat-tab-group animationDuration="0ms">
       <mat-tab label="User Details">
         <div class="tab-container">
-          <steelhead-user-flags [identity]="identity"></steelhead-user-flags>
+          <steelhead-user-flags
+            [identity]="identity"
+            (flagsUpdated)="flagsUpdated()"
+          ></steelhead-user-flags>
           <steelhead-player-game-details [identity]="identity"></steelhead-player-game-details>
           <steelhead-report-weight [identity]="identity"></steelhead-report-weight>
 
