--- a/StewardClient/src/app/shared/views/player-profile-management/player-profile-management.component.html
+++ b/StewardClient/src/app/shared/views/player-profile-management/player-profile-management.component.html
@@ -6,14 +6,23 @@
         <div class="tab-container load-template-container" *waitForMonitor="getTemplatesMonitor">
           <form [formGroup]="loadFormGroup" class="sf-wrapper">
             <div class="sf-vertical">
-              <mat-form-field appearance="fill">
-                <mat-label>Select Sandbox</mat-label>
-                <mat-select [formControl]="loadFormControls.forzaSandbox">
-                  <mat-option *ngFor="let sandbox of forzaSandboxEnum" [value]="sandbox">
-                    {{ sandbox }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
+              <div>
+                <mat-form-field appearance="fill">
+                  <mat-label>Select Sandbox</mat-label>
+                  <mat-select [formControl]="loadFormControls.forzaSandbox">
+                    <mat-option *ngFor="let sandbox of forzaSandboxEnum" [value]="sandbox">
+                      {{ sandbox }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <help-popover-icon cardTitle="Where's the test sandbox?">
+                  <span
+                    >To load to a profile's test sandbox, the user must be a member of the Turn10
+                    Employee group. You can assign this group with the player flags tool in the User
+                    Details tab.</span
+                  >
+                </help-popover-icon>
+              </div>
               <mat-form-field appearance="fill">
                 <mat-label>Select Profile Template</mat-label>
                 <mat-select [formControl]="loadFormControls.template">
