--- a/StewardClient/src/app/shared/views/forum-ban-history/forum-ban-history.component.html
+++ b/StewardClient/src/app/shared/views/forum-ban-history/forum-ban-history.component.html
@@ -4,7 +4,7 @@
     <mat-card-subtitle>Forum</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <ng-container *ngIf="!isLoading && !loadError; else failstate">
+    <ng-container *waitForMonitor="getMonitor">
       <table mat-table [dataSource]="banList" multiTemplateDataRows>
         <ng-container matColumnDef="reason">
           <th mat-header-cell *matHeaderCellDef>Reason</th>
@@ -30,8 +30,3 @@
     </ng-container>
   </mat-card-content>
 </mat-card>
-
-<ng-template #failstate>
-  <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
-  <json-dump *ngIf="loadError" [input]="loadError">Failed to load.</json-dump>
-</ng-template>
