--- a/StewardClient/src/app/shared/views/feature-ugc-modal/feature-ugc-modal.component.html
+++ b/StewardClient/src/app/shared/views/feature-ugc-modal/feature-ugc-modal.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>
-  Feature {{ gameTitle }} Ugc Content
+  Feature {{ gameTitle | humanize }} Ugc Content
   <br />
   <span class="mat-subheading-2">
     {{
