--- a/StewardClient/src/app/pages/ticket-app/components/player-sidebar-details/player-sidebar-details.component.html
+++ b/StewardClient/src/app/pages/ticket-app/components/player-sidebar-details/player-sidebar-details.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>Player Details</mat-card-title>
-      <mat-card-subtitle> {{ gameTitle }} (click on row to copy) </mat-card-subtitle>
+      <mat-card-subtitle> {{ gameTitle | humanize }} (click on row to copy) </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <div>
