--- a/StewardClient/src/app/pages/tools/pages/gifting/components/gift-livery/gift-livery.component.html
+++ b/StewardClient/src/app/pages/tools/pages/gifting/components/gift-livery/gift-livery.component.html
@@ -2,7 +2,7 @@
   <mat-card-header>
     <mat-card-title>Gift Car + Livery</mat-card-title>
     <mat-card-subtitle>
-      {{ gameTitle }}
+      {{ gameTitle | humanize }}
     </mat-card-subtitle>
   </mat-card-header>
   <span>Gifting car liveries is currently not tracked in gift history.</span>
