--- a/StewardClient/src/app/shared/views/player-selection/single/player-selection-single.component.html
+++ b/StewardClient/src/app/shared/views/player-selection/single/player-selection-single.component.html
@@ -7,19 +7,19 @@
 >
   <mat-button-toggle
     *ngIf="!disableLookupTypes.includes('gamertag')"
-    [disabled]="lookupIdentitiessMonitor.isActive"
+    [disabled]="lookupIdentitiesMonitor.isActive"
     value="gamertag"
     >GTAG</mat-button-toggle
   >
   <mat-button-toggle
     *ngIf="!disableLookupTypes.includes('xuid')"
-    [disabled]="lookupIdentitiessMonitor.isActive"
+    [disabled]="lookupIdentitiesMonitor.isActive"
     value="xuid"
     >XUID</mat-button-toggle
   >
   <mat-button-toggle
     *ngIf="!disableLookupTypes.includes('t10Id')"
-    [disabled]="lookupIdentitiessMonitor.isActive"
+    [disabled]="lookupIdentitiesMonitor.isActive"
     value="t10Id"
     >T10</mat-button-toggle
   >
