--- a/StewardClient/src/app/pages/tools/pages/user-details/steelhead/steelhead-user-details.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-details/steelhead/steelhead-user-details.component.html
@@ -3,7 +3,7 @@
   <section>
     <mat-tab-group animationDuration="0ms">
       <mat-tab label="User Details">
-        <div class="tab-container">
+        <div class="tab-container sf-wrapper">
           <div class="sf-horizontal do-not-align-item">
             <steelhead-user-flags
               [identity]="identity"
