--- a/StewardClient/src/app/shared/views/loyalty-rewards/steelhead/steelhead-loyalty-rewards.component.scss
+++ b/StewardClient/src/app/shared/views/loyalty-rewards/steelhead/steelhead-loyalty-rewards.component.scss
@@ -13,11 +13,7 @@ th {
   justify-content: center;
 }
 
-.submit-field {
-  margin-top: $gap-medium;
-}
-
-mat-checkbox {
+button {
   margin-left: $gap-small;
 }
 
