--- a/StewardClient/src/app/shared/views/loyalty-rewards/steelhead/steelhead-loyalty-rewards.component.html
+++ b/StewardClient/src/app/shared/views/loyalty-rewards/steelhead/steelhead-loyalty-rewards.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>Loyalty Rewards</mat-card-title>
-    <mat-card-subtitle>{{ gameTitle }}</mat-card-subtitle>
+    <mat-card-subtitle>{{ gameTitle | humanize }}</mat-card-subtitle>
     <help-popover-icon cardTitle="Loyalty Rewards">
       <span
         >When clicking the 'Update Has Played' button, the tool will mark the selected titles as
