--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/forum/forum-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/forum/forum-banning.component.html
@@ -112,6 +112,7 @@
                   [monitor]="banActionMonitor"
                   monitorDisable
                   [permissionAttribute]="permAttribute"
+                  [permissionSupportV1Auth]="false"
                 >
                   Verify ban
                 </mat-checkbox>
