--- a/StewardClient/src/app/shared/views/driver-level/driver-level.component.scss
+++ b/StewardClient/src/app/shared/views/driver-level/driver-level.component.scss
@@ -5,4 +5,7 @@ form {
   display: flex;
   flex-flow: row wrap;
   align-items: flex-end;
+  mat-form-field {
+    width: $single-input-max-width;
+  }
 }
