--- a/StewardClient/src/app/shared/views/driver-level/driver-level.component.html
+++ b/StewardClient/src/app/shared/views/driver-level/driver-level.component.html
@@ -31,26 +31,33 @@
     </button>
   </mat-card-header>
   <form [formGroup]="formGroup" class="sf-wrapper">
-    
     <div class="sf-vertical" *waitForMonitor="getMonitor">
       <div class="sf-horizontal">
         <mat-form-field appearance="fill" class="sf-default-hint">
           <mat-label>Driver Level</mat-label>
           <input type="number" matInput [formControl]="formControls.driverLevel" />
-          <mat-error *ngIf="formControls.driverLevel.hasError('min')">Driver level must be greater than or equal to 1.</mat-error>
-          <mat-error *ngIf="formControls.driverLevel.hasError('max')">Driver level must be less than or equal to 999.</mat-error>
+          <mat-error *ngIf="formControls.driverLevel.hasError('min')"
+            >Driver level must be greater than or equal to 1.</mat-error
+          >
+          <mat-error *ngIf="formControls.driverLevel.hasError('max')"
+            >Driver level must be less than or equal to 999.</mat-error
+          >
         </mat-form-field>
       </div>
-  
+
       <div class="sf-horizontal">
         <mat-form-field appearance="fill" class="sf-default-hint">
           <mat-label>Prestige Rank</mat-label>
           <input type="number" matInput [formControl]="formControls.prestigeRank" />
-          <mat-error *ngIf="formControls.prestigeRank.hasError('min')">Prestige rank must be at least 0.</mat-error>
-          <mat-error *ngIf="formControls.prestigeRank.hasError('max')">Prestige rank level must be less than or equal to 99.</mat-error>
+          <mat-error *ngIf="formControls.prestigeRank.hasError('min')"
+            >Prestige rank must be at least 0.</mat-error
+          >
+          <mat-error *ngIf="formControls.prestigeRank.hasError('max')"
+            >Prestige rank level must be less than or equal to 99.</mat-error
+          >
         </mat-form-field>
       </div>
-  
+
       <div class="sf-horizontal">
         <mat-form-field appearance="fill" class="sf-default-hint">
           <mat-label>Experience Points</mat-label>
@@ -59,6 +66,5 @@
         </mat-form-field>
       </div>
     </div>
-
-  </form>  
+  </form>
 </mat-card>
