New Ban for Woodstock

--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.scss
@@ -4,10 +4,30 @@
   @include flex-column-fill();
 }
 
+.ban-area {
+  margin-bottom: $gap-medium;
+}
+
 .ban-action-container {
   margin-top: $gap-medium;
 
   .mat-checkbox {
     margin-left: $gap-small;
   }
+}
+
+.ban-area {
+  label,
+  span {
+    display: block;
+  }
+}
+
+.mat-button-toggle-checked.mat-button-toggle-checked {
+  background-color: app-color-default($app-primary);
+  color: app-color-default-contrast($app-primary);
+}
+
+.warn {
+  color: app-color-default($app-warn);
 }
