--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
@@ -50,36 +50,124 @@
       <mat-card-content>
         <ng-container *waitForMonitor="banActionMonitor">
           <ng-container *ngIf="!banResults; else banResultsState">
-            <form [formGroup]="formGroup">
-              <ban-options [formControl]="formControls.banOptions"></ban-options>
-              <div class="ban-action-container">
-                <button
-                  mat-raised-button
-                  color="warn"
-                  (click)="submitBan()"
-                  clickStop
-                  stateManager
-                  monitorDisable
-                  [monitor]="banActionMonitor"
-                  [disabled]="!canBan()"
-                  [verifyWith]="confirmBan"
-                  matTooltip="Create or force replace pipeline (even if it is in an UNSAFE state)"
+            <div class="sf-wrapper" [formGroup]="formGroup">
+              <div class="sf-vertical">
+                <div class="sf-horizontal">
+                  <section class="ban-area">
+                    <label>Ban Area</label>
+                    <mat-button-toggle-group [formControl]="formControls.banArea">
+                      <mat-button-toggle [value]="banAreaEnum.AllFeatures"
+                        >All Features</mat-button-toggle
+                      >
+                      <mat-button-toggle [value]="banAreaEnum.UserGeneratedContent"
+                        >User Generated Content</mat-button-toggle
+                      >
+                      <mat-button-toggle [value]="banAreaEnum.Matchmaking"
+                        >Matchmaking</mat-button-toggle
+                      >
+                    </mat-button-toggle-group>
+
+                    <span
+                      *ngIf="formControls.banArea.value === banAreaEnum.AllFeatures"
+                      class="warn"
+                    >
+                      All player(s) UGC content will be removed when banning All Requests.
+                    </span>
+                  </section>
+                </div>
+                <div class="sf-horizontal">
+                  <mat-form-field class="standard-ban-reason" appearance="fill">
+                    <mat-label>Ban Reason</mat-label>
+                    <input
+                      type="text"
+                      matInput
+                      [formControl]="formControls.banReason"
+                      placeholder="ʕ•́ᴥ•̀ʔっ"
+                      required
+                      [matAutocomplete]="autoGroup"
+                    />
+                    <mat-autocomplete #autoGroup="matAutocomplete">
+                      <mat-optgroup
+                        *ngFor="let group of banReasonOptions | async"
+                        [label]="group.group"
+                      >
+                        <mat-option *ngFor="let value of group.values" [value]="value">{{
+                          value
+                        }}</mat-option>
+                      </mat-optgroup>
+                    </mat-autocomplete>
+                    <mat-hint>This reason will be shown to the player.</mat-hint>
+                    <mat-error *ngIf="formControls.banReason.hasError('required')"
+                      >Missing ban reason</mat-error
+                    >
+                    <mat-error *ngIf="formControls.banReason.hasError('requireReasonListMatch')"
+                      >Please select a ban reason from the dropdown</mat-error
+                    >
+                  </mat-form-field>
+                </div>
+                <div class="sf-horizontal">
+                  <mat-form-field class="sf-default-hint" appearance="fill">
+                    <mat-label>Ban Configuration</mat-label>
+                    <mat-select [formControl]="formControls.banConfiguration">
+                      <mat-option
+                        *ngFor="let banConfig of banConfigurations"
+                        [value]="banConfig.banConfigurationId"
+                      >
+                        {{ banConfig.friendlyName }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+
+                <mat-checkbox [formControl]="formControls.overrideDuration"
+                  >Override Duration</mat-checkbox
                 >
-                  Ban
-                  <button-spinner [monitor]="banActionMonitor" defaultIcon="gavel"></button-spinner>
-                </button>
-                <mat-checkbox
-                  #confirmBan
-                  stateManager
-                  [monitor]="banActionMonitor"
-                  monitorDisable
-                  [permissionAttribute]="permAttribute"
-                  [permissionTitle]="gameTitle"
+                <ng-container *ngIf="formControls.overrideDuration?.value">
+                  <mat-checkbox [formControl]="formControls.banAllDevices"
+                    >Ban all Xboxes and PCs (No expiry)</mat-checkbox
+                  >
+                  <mat-checkbox [formControl]="formControls.permanentBan"
+                    >Permanent Ban</mat-checkbox
+                  >
+                  <duration-picker [formControl]="formControls.banDuration"></duration-picker>
+                </ng-container>
+
+                <mat-checkbox [formControl]="formControls.deleteLeaderboardEntries"
+                  >Delete all leaderboard entries (Permanent)</mat-checkbox
                 >
-                  Verify ban
-                </mat-checkbox>
+
+                <div class="ban-action-container">
+                  <button
+                    mat-raised-button
+                    color="warn"
+                    (click)="submitBan()"
+                    clickStop
+                    stateManager
+                    monitorDisable
+                    [monitor]="banActionMonitor"
+                    [disabled]="!canBan()"
+                    [verifyWith]="confirmBan"
+                    matTooltip="Create or force replace pipeline (even if it is in an UNSAFE state)"
+                  >
+                    Ban
+                    <button-spinner
+                      [monitor]="banActionMonitor"
+                      defaultIcon="gavel"
+                    ></button-spinner>
+                  </button>
+                  <mat-checkbox
+                    #confirmBan
+                    stateManager
+                    [monitor]="banActionMonitor"
+                    monitorDisable
+                    [permissionAttribute]="permAttribute"
+                    [permissionTitle]="gameTitle"
+                  >
+                    Verify ban
+                  </mat-checkbox>
+                </div>
               </div>
-            </form>
+            </div>
           </ng-container>
         </ng-container>
 
