--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise/sunrise-ugc-details.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise/sunrise-ugc-details.component.scss
@@ -1,6 +1,6 @@
 @import '/src/styles/mixins';
 
-span.alternate-name {
+.alternate-name {
   position: absolute;
   display: block;
   font-size: 0.8em;
