--- a/StewardClient/src/app/shared/views/loyalty-rewards/steelhead/steelhead-loyalty-rewards.component.html
+++ b/StewardClient/src/app/shared/views/loyalty-rewards/steelhead/steelhead-loyalty-rewards.component.html
@@ -18,6 +18,7 @@
             <th mat-header-cell *matHeaderCellDef>Label</th>
             <td mat-cell *matCellDef="let entry">
               <span>
+                <p *ngIf="entry?.label === displayLabel">{{ entry.label }}</p>
                 <button
                   *ngIf="entry.label === actionLabel"
                   mat-raised-button
@@ -41,12 +42,12 @@
               {{ gameColumn }}
             </th>
             <td mat-cell *matCellDef="let row">
-              <span *ngIf="row.label === 'hasPlayed'">
+              <span *ngIf="row.label === displayLabel">
                 <mat-icon *ngIf="row.titles[gameColumn]; else falseFlagTemplate" class="green-icon"
                   >check_circle</mat-icon
                 >
               </span>
-              <span *ngIf="row.label === 'updateHasPlayed'">
+              <span *ngIf="row.label === actionLabel">
                 <mat-checkbox
                   *ngIf="!row.titles[gameColumn]"
                   stateManager
@@ -61,6 +62,9 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+        <div *ngIf="errorSending" class="send-failed">
+          <mat-error class="send-error">{{ errorMessage }}</mat-error>
+        </div>
       </ng-container>
     </ng-container>
   </mat-card-content>
