--- a/StewardClient/src/app/shared/views/loyalty-rewards/steelhead/steelhead-loyalty-rewards.component.html
+++ b/StewardClient/src/app/shared/views/loyalty-rewards/steelhead/steelhead-loyalty-rewards.component.html
@@ -62,7 +62,7 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
-        <div *ngIf="errorSending" class="send-failed">
+        <div *ngIf="errorMessage" class="send-failed">
           <mat-error class="send-error">{{ errorMessage }}</mat-error>
         </div>
       </ng-container>
