--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/user-permission-management/user-permission-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/user-permission-management/user-permission-management.component.html
@@ -43,7 +43,15 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-
+      <ng-container
+        >Why are some permissions disabled?
+        <help-popover-icon
+          >Only permissions you yourself have are available for you to change for your team members.
+          <br />
+          If you require more permissions to manange, please reach out to a live ops admin for
+          help.</help-popover-icon
+        ></ng-container
+      >
       <ng-container *waitForMonitor="getPermissionsActionMonitor">
         <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
           <mat-tree-node
